# Bike-Sharing

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  eda.ipynb  ml_project_structure.py  mlflow.db  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: package.yml  python-publish.yml
api/: main.py  schemas.py
bike-sharing-model/: .gitignore  pyproject.toml
bike-sharing-model/.github/workflows/: package.yml
bike-sharing-model/api/: main.py  schemas.py
bike-sharing-model/bike_sharing_model/config/: core.py  settings.py
bike-sharing-model/bike_sharing_model/data/: loader.py  preprocessor.py  yml_validator.py
bike-sharing-model/bike_sharing_model/features/: feature_engineering.py
bike-sharing-model/bike_sharing_model/models/: evaluator.py  predictor.py  trainer.py
bike-sharing-model/bike_sharing_model/utils/: helpers.py
bike-sharing-model/scripts/: predict.py  train.py
bike_sharing_model/: mlflow_runner.py
bike_sharing_model/config/: core.py
bike_sharing_model/configs/: data.yml  model.yml
bike_sharing_model/data/: loader.py  preprocessor.py  yml_validator.py
bike_sharing_model/features/: feature_engineering.py
bike_sharing_model/models/: evaluator.py  predictor.py  trainer.py
bike_sharing_regressor_model/: .gitignore  pyproject.toml
bike_sharing_regressor_model/bike_sharing_regressor_model/config/: settings.py
bike_sharing_regressor_model/bike_sharing_regressor_model/data/: data_validation.py  preprocess.py
bike_sharing_regressor_model/bike_sharing_regressor_model/features/: build_features.py
bike_sharing_regressor_model/bike_sharing_regressor_model/models/: evaluate.py  predict.py  preprocess.py  train.py
bike_sharing_regressor_model/bike_sharing_regressor_model/utils/: helper.py
bike_sharing_regressor_model/configs/: data.yml
bike_sharing_regressor_model/old_version/: .gitignore  .swp
bike_sharing_regressor_model/old_version/bike_sharing_regressor_model/data/: load.py  preprocess.py
bike_sharing_regressor_model/old_version/bike_sharing_regressor_model/models/: train.py
bike_sharing_regressor_model/old_version/bike_sharing_regressor_model/utils/: helper.py
bike_sharing_regressor_model/old_version/scripts/: predict.py  train.py
bike_sharing_regressor_model/old_version/trained_models/: catboost_regressor_model_output_v.pkl
bike_sharing_regressor_model/predictions/: predicted_results.csv
bike_sharing_regressor_model/scripts/: predict.py  train.py
bike_sharing_regressor_model/trained_models/: catboost_pipeline.pkl  catboost_regressor_model_output_v  catboost_regressor_model_output_v.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_model/: .gitignore  __init__.py  config.yml
catboost_model/config/: core.py
catboost_model/datasets/: bike_sharing.csv
catboost_model/notebooks/: eda.ipynb
catboost_model/processing/: data_manager.py
catboost_model/src/: main.py  predict.py  preprocess.py  train.py
catboost_model/trained_models/: catboost_pipeline.pkl
datasets/processed/: .gitignore  test_split.csv  test_split.csv.dvc
models/: catboost_pipeline.pkl
notebooks/: README.md  eda.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
predictions/: predicted_results.csv
scripts/: predict.py  train.py
src/: predict.py  train.py
tests/: test_data.py
