[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-sharing-model"
version = "0.1.0"
description = "Bike Sharing Demand Regression Model (ML Engineering Project)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Hussam" }
]

# Dependencies الأساسية للـ ML + API فقط
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "lightgbm>=4.0",
    "feature-engine>=1.7.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29"
]

# Dev dependencies (اختياري)
[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML"
]

# Scripts
[project.scripts]
train-bike = "scripts.train:run_training"
predict-bike = "scripts.predict:run_prediction"

# Package data
[tool.setuptools]
include-package-data = true
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
bike_sharing_model = ["configs/*.yml"]
