[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-sharing-model"
version = "0.1.0"
description = "Bike Sharing Demand Regression Model (ML Engineering Project)"
readme = "README.md"
requires-python = "==3.10.16"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Hussam" }
]

# Main Dependencies
dependencies = [
    "numpy==2.0.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "catboost==1.2.8",
    "feature-engine==1.9.3",
    "pyyaml==6.0.2",
    "joblib==1.4.2",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "dvc==3.66.1",
    "dagshub==0.6.4"
]

# Dev Dependencies
[project.optional-dependencies]
dev = [
    "lightgbm==4.6.0",
    "xgboost==3.0.4",
    "flake8==7.3.0",
    "isort==7.0.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "black==25.12.0",
    "ruff==0.14.10",
    "mypy==1.19.1",
    "types-PyYAML==6.0.12.20250915"
]

# Scripts
[project.scripts]
train-bike = "scripts.train:run_training"
predict-bike = "scripts.predict:run_prediction"

# Package data
[tool.setuptools]
include-package-data = true
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
bike_sharing_model = ["configs/*.yml"]
