[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-sharing-regressor-model"
version = "0.1.0"
description = "Bike Sharing Demand Regression Model (ML Engineering Project)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Hussam" }
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "lightgbm>=4.0",
    "feature-engine>=1.7.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
train-bike = "scripts.train:run_training"
predict-bike = "scripts.predict:run_prediction"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
bike_sharing_regressor_model = ["configs/*.yml"]

# -------------------------
# 🧪 Pytest
# -------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

# -------------------------
# 🎨 Black
# -------------------------
[tool.black]
line-length = 88
target-version = ["py310"]

# -------------------------
# ⚡ Ruff
# -------------------------
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# -------------------------
# 🧠 MyPy
# -------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
